Apply margin-top styling to 'main' to fix overlapping issue with fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,7 @@ main {
   background-color: rgb(165, 165, 165);
   /* Make the main element take up any surplus space in order to push footer to bottom of page */
   flex: 1 0 auto;
+  margin-top: 76px;
 }
 
 /* Footer */
